# speechbubble

./: .gitignore  .vercelignore  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
deploy/: Dockerfile  docker-compose.yml
docs/: manual_editor_spec.md  requirements.md
examples/: dialogues.json  generate_sample.py  sample_face_hints.json  sample_output.json
scripts/: build_bubble_assets.py
src/speechbubble/: __init__.py  api.py  cli.py  config.py  layout.py  pipeline.py  render.py  schemas.py  ui.py  vision.py
src/speechbubble.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/speechbubble/static/: manual_editor.html  manual_editor.js
src/speechbubble/static/bubbles/: LICENSES.md  SOURCES.json  manifest.json
tests/: test_api.py  test_assets_manifest.py  test_layout.py  test_pipeline.py
