[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speechbubble"
version = "0.1.0"
description = "Automatic speech bubble insertion for illustration workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy==2.3.1",
  "opencv-python-headless==4.11.0.86",
  "Pillow==11.2.1",
  "fastapi==0.115.14",
  "uvicorn[standard]==0.35.0",
  "python-multipart==0.0.22",
  "pydantic==2.11.7",
  "gradio==6.8.0",
  "huggingface-hub==0.36.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "httpx>=0.27",
  "ruff>=0.6",
]

[project.scripts]
speechbubble = "speechbubble.cli:main"
speechbubble-api = "speechbubble.api:run"
speechbubble-ui = "speechbubble.ui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
